# cmakedemo2

./: CMakeLists.txt  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  demo.cpp  demo.h  main.cpp
tests/: CMakeLists.txt  sometestB.cpp  test_demo.cpp
